--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -144,7 +144,7 @@
       <button class="btn btn-primary" type="submit">Entrar</button>
 
       <div class="login-actions">
-        <a href="{% url 'account_reset_password' %}">Esqueceu a senha?</a>
+        <!--<a href="{% url 'account_reset_password' %}">Esqueceu a senha?</a>-->
         <!-- <a href="{% url 'account_signup' %}">Criar conta</a> -->
       </div>
     </form>
